# ir_axioms

./: .devcontainer.json  .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint.json  Dockerfile  Dockerfile.dev  README.md  example-pyterrier.ipynb  pyproject.toml  requirements-pyserini.txt  requirements-pyterrier.txt  requirements-test.txt  requirements.txt  setup.cfg  slurm-start-jupyter-lab.sh  start-notebook-on-gammaweb.sh
.github/workflows/: ci.yml  codeql-analysis.yml
axioms/: __init__.py  __main__.py  cli.py  dependency_injection.py  logging.py
axioms/algorithms/: ranking.py
axioms/axiom/: __init__.py  argumentative.py  arithmetic.py  base.py  cache.py  conversion.py  estimator.py  length_norm.py  lower_bound.py  parallel.py  precondition.py  preconditions.py  proximity.py  query_aspects.py  retrieval_score.py  simple.py  term_frequency.py  term_similarity.py  test_cache.py  trec.py  utils.py
axioms/model/: __init__.py  base.py  context.py  generation.py  retrieval.py  retrieval_model.py
axioms/modules/: pivot.py  ranking.py  similarity.py
axioms/precondition/: __init__.py  axiom.py  base.py  length.py
axioms/tools/: __init__.py  aspects.py  term_similarity.py
axioms/utils/: nltk.py  test_lazy.py
binder/: postBuild  start.sh
data/: 2024-retrieval-qrels.txt  final.citation_judgments_Webassess.20241031.jsonl  final.citation_judgments_with_prediction.20241025.jsonl  final.citation_judgments_without_prediction.20241025.jsonl  nugget_assignment.20241108.jl  ratings-HuggingFaceTB-SmolLM-135M-Instruct.jsonl  ratings-HuggingFaceTB-SmolLM-360M-Instruct.jsonl  ratings-Qwen-Qwen2.5-0.5B-Instruct.jsonl  ratings-TinyLlama-TinyLlama-1.1B-Chat-v1.0.jsonl  topics.rag24.test.txt  traditional-axiom-effectiveness.csv  traditional-axiom-effectiveness.xlsx
data/crowd/: ratings.jsonl
docs/: axiom-development.md  axioms.md  migration-v1.md  rag-axioms.md  term_frequency.py.diff
documentation/: axioms.md  similarity.md
examples/: .gitignore  Untitled1.ipynb  cross_validation_util.py  grid-search-axiomatic-re-ranking-approaches.ipynb  pyterrier.ipynb  pyterrier_kwiksort.ipynb  pyterrier_kwiksort_learned.ipynb  pyterrier_ltr_features.ipynb  pyterrier_post_hoc_analysis_of_runs_and_qrels.ipynb  pyterrier_preferences_parallel.ipynb  pyterrier_reranking_comparison.ipynb  pyterrier_tutorial.ipynb  sigir2022_showcase.ipynb  trec-reranking.ipynb  trec.ipynb  trec_28_deep_documents_preferences_depth_10.ipynb  trec_28_deep_documents_preferences_depth_20.ipynb  trec_28_deep_passages_preferences_depth_10.ipynb  trec_28_deep_passages_preferences_depth_20.ipynb  trec_28_deep_passages_reranking.ipynb  trec_28_deep_preferences.ipynb  trec_28_deep_preferences.py  trec_28_deep_reranking.ipynb  trec_29_deep_documents_cache_impact_depth_20.ipynb  trec_29_deep_documents_overlap_depth_20.ipynb  trec_29_deep_documents_preferences_depth_10.ipynb  trec_29_deep_documents_preferences_depth_20.ipynb  trec_29_deep_passages_preferences_depth_10.ipynb  trec_29_deep_passages_preferences_depth_20.ipynb  trec_preferences.py  trec_util.py
examples/paper/: evaluations-paper.ipynb  grid-search-axiomatic-re-ranking-approaches.ipynb  trec-dl-ms-marco-passage.ipynb
experiments/: .gitignore  generate_llm_responses.py  grenoble2025_showcase.ipynb  ictir2025.ipynb  llm_ratings.py  llm_responses.py  pyterrier_kwiksort.ipynb  pyterrier_kwiksort_learned.ipynb  pyterrier_ltr_features.ipynb  pyterrier_post_hoc_analysis_of_runs_and_qrels.ipynb  pyterrier_preferences.ipynb  pyterrier_preferences_parallel.ipynb  pyterrier_reranking_comparison.ipynb  ray-env.yml  sigir.ipynb  sigir2022_showcase.ipynb
experiments/sigir2022/: grid-search-axiomatic-re-ranking-approaches.ipynb  table-axiom-distribution-on-trec-dl.ipynb
ir_axioms/: __init__.py  __main__.py  cli.py  dependency_injection.py  logging.py
ir_axioms/algorithms/: ranking.py
ir_axioms/app/: __init__.py
ir_axioms/axiom/: __init__.py  all.py  argumentative.py  arithmetic.py  base.py  cache.py  conversion.py  estimator.py  length_norm.py  lower_bound.py  parallel.py  precondition.py  preconditions.py  proximity.py  query_aspects.py  registry.py  retrieval_score.py  simple.py  sort.py  term_frequency.py  term_similarity.py  test_cache.py  trec.py  utils.py  utils_actions.py
ir_axioms/backend/: __init__.py  backend_pyserini.py
ir_axioms/integrations/: __init__.py
ir_axioms/model/: __init__.py  base.py  context.py  generation.py  retrieval.py  retrieval_model.py  utils.py
ir_axioms/modules/: pivot.py  ranking.py  similarity.py
ir_axioms/precondition/: __init__.py  axiom.py  base.py  length.py  simple.py
ir_axioms/tools/: __init__.py
ir_axioms/utils/: __init__.py  injection.py  lazy.py  libraries.py  nltk.py  pyserini.py  pyterrier.py  similarity.py  test_lazy.py
scripts/: slurm-start-jupyter-lab.sh  slurm-trec-preferences.sh
tests/: test_arithmetic.py  test_cache.py  test_empty_content.py  test_estimator.py  test_length_norm.py  test_lower_bound.py  test_proximity.py  test_pyterrier.py  test_pyterrier.test_aggregated_axiomatic_preferences_compute.approved.txt  test_pyterrier.test_aggregated_axiomatic_preferences_empty_input.approved.txt  test_pyterrier.test_axiomatic_experiment_inconsistent_pairs.approved.txt  test_pyterrier.test_axiomatic_experiment_preference_consistency.approved.txt  test_pyterrier.test_axiomatic_experiment_preference_distribution.approved.txt  test_pyterrier.test_axiomatic_experiment_preferences.approved.txt  test_pyterrier.test_axiomatic_preferences_compute.approved.txt  test_pyterrier.test_axiomatic_preferences_empty_input.approved.txt  test_pyterrier.test_kwiksort_empty_input.approved.txt  test_pyterrier.test_kwiksort_rerank.approved.txt  test_pyterrier_pre_tokenized.py  test_query_aspects.py  test_registry.py  test_simple.py  test_term_frequency.py  test_term_similarity.py  test_trec.py  util.py
tests/integration/: test_pyserini.py  test_pyterrier.py
tests/unit/: test_arithmetic.py  test_conversion.py  test_empty_content.py  test_proximity.py  (+11 more)
trec-auto-judge/: Dockerfile  README.md  axiom_judge.py  workflow.yml
(+165 files in other folders)
