[project]
name = "axioms"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
    {name = "Alexander Bondarenko", email = "alexander.bondarenko@uni-jena.de"},
    {name = "Maik Fröbe", email = "maik.froebe@uni-jena.de"},
    {name = "Benno Stein", email = "benno.stein@uni-weimar.de"},
    {name = "Michael Völske", email = "michael.voelske@uni-weimar.de"},
    {name = "Matthias Hagen", email = "matthias.hagen@uni-jena.de"},
]
description = "Axiomatic constraints for (generative) information retrieval."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "annotated-types~=0.7.0",
    "cyclopts~=3.0",
    "diskcache~=5.6",  # TODO: Instead just use SQLite directly.
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "fasttext~=0.9.3",
    "huggingface-hub~=0.26.5",
    "injector~=0.22.0",
    "ir-datasets~=0.5.9",  # TODO: Make this an optional dependency.
    "ir-measures~=0.3.6",  # TODO: Make this an optional dependency.
    "joblib~=1.4",
    "nltk~=3.9",
    "numpy~=1.26",
    "pandas~=2.2",
    "pydantic~=2.9",
    "python-dotenv~=1.0",
    "scikit-learn~=1.4",
    "spacy~=3.7",
    "targer-api~=1.1",  # TODO: Make this an optional dependency.
    "tqdm~=4.67",
    "trectools~=0.0.49",  # TODO: Make this an optional dependency.
    "usearch~=2.16",
]
dynamic = ["version"]

[project.optional-dependencies]
tests =[
    "bandit[toml]~=1.7",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff~=0.8.1",
    "types-tqdm~=4.66",
]
experiments =[
    "jupyter~=1.1",
    "lightgbm~=4.5",
    "ragas~=0.2.5",
    "ray[default,data]~=2.40.0",
    "rouge-score~=0.1.2",
    "xgboost~=2.1",
]
pyserini =[
    "pyserini~=0.43",
]
pyterrier =[
    "python-terrier~=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/janheinrichmerker/axioms"
"Bug Tracker" = "https://github.com/janheinrichmerker/axioms/issues"

[project.scripts]
axioms = "axioms.cli:app"

[build-system]
requires = [
    "setuptools~=75.4",
    "setuptools-scm~=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.ruff]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]
ignore_missing_imports = true
disable_error_code = "type-abstract"

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"

[tool.setuptools_scm]
