[project]
name = "ir_axioms"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
    {name = "Alexander Bondarenko", email = "alexander.bondarenko@uni-jena.de"},
    {name = "Maik Fröbe", email = "maik.froebe@uni-jena.de"},
    {name = "Benno Stein", email = "benno.stein@uni-weimar.de"},
    {name = "Michael Völske", email = "michael.voelske@uni-weimar.de"},
    {name = "Matthias Hagen", email = "matthias.hagen@uni-jena.de"},
    {name = "Martin Potthast", email = "martin.potthast@uni-kassel.de"},
]
description = "Axiomatic constraints for information retrieval and retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "annotated-types~=0.7.0",
    "cached-property~=2.0",
    "cyclopts~=3.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",  # TODO: Move this to the optional dependencies.
    "fasttext~=0.9.3",
    "fastcoref~=2.1",
    "huggingface-hub[hf_xet]~=0.30.1",
    "injector~=0.22.0",
    "ir-datasets~=0.5.9",  # TODO: Make this an optional dependency.
    "ir-measures~=0.3.6",  # TODO: Make this an optional dependency.
    "joblib~=1.4",
    "keybert~=0.8.5",
    "language-tool-python~=2.8",
    "more-itertools~=10.5",
    "negspacy~=1.0",
    "nltk~=3.9",
    "numpy~=1.26",
    "optimask~=1.3",
    "pandas~=2.2",
    "phonetics~=1.0",
    "pydantic~=2.9",
    "pyspellchecker~=0.8.1",
    "python-dotenv~=1.0",
    "rouge-score~=0.1.2",
    "scikit-learn~=1.4",
    "scipy~=1.15",
    "sentence-transformers~=4.0",
    "spacy~=3.7",
    "targer-api~=1.1",  # TODO: Make this an optional dependency.
    "textacy~=0.13.0",
    "tf-keras~=2.18",
    "tqdm~=4.67",
    "trectools~=0.0.49",  # TODO: Make this an optional dependency.
    "usearch~=2.16",
    "wordfreq~=3.1",
    # TODO: Clean up dependencies, make them optional if possible.
]
dynamic = ["version"]

[project.optional-dependencies]
tests =[
    "bandit[toml]~=1.8",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff~=0.11.0",
    "types-tqdm~=4.66",
]
experiments =[
    "cappr[hf]~=0.9.6",
    "jupyter~=1.1",
    "lightgbm~=4.5",
    "ragas~=0.3.0",
    "ray[default,data]~=2.44.1",
    "seaborn~=0.13.2",
    "transformers~=4.48",
    "typing-extensions~=4.12",
    "xgboost~=2.1",
]
pyserini =[
    "pyserini~=0.43",
]
pyterrier =[
    "python-terrier~=0.13.0",
]

[project.urls]
"Homepage" = "https://github.com/webis-de/ir_axioms"
"Bug Tracker" = "https://github.com/webis-de/ir_axioms/issues"

[project.scripts]
axioms = "ir_axioms.cli:app"
ir_axioms = "ir_axioms.cli:app"
ir-axioms = "ir_axioms.cli:app"

[build-system]
requires = [
    "setuptools~=78.1",
    "setuptools-scm~=8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.ruff]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
    "experiments",  # TODO: Re-enable this once the experiments are cleaned up.
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]
ignore_missing_imports = true
disable_error_code = "type-abstract"

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"

[tool.setuptools_scm]
