[project]
name = "ir_axioms"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
    {name = "Alexander Bondarenko", email = "alexander.bondarenko@uni-jena.de"},
    {name = "Maik Fröbe", email = "maik.froebe@uni-jena.de"},
    {name = "Benno Stein", email = "benno.stein@uni-weimar.de"},
    {name = "Michael Völske", email = "michael.voelske@uni-weimar.de"},
    {name = "Matthias Hagen", email = "matthias.hagen@uni-jena.de"},
    {name = "Martin Potthast", email = "martin.potthast@uni-kassel.de"},
]
description = "Axiomatic constraints for information retrieval and retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "annotated-types~=0.7.0",
    "cached-property~=2.0",
    "cyclopts~=3.0",
    "fasttext~=0.9.3",
    "frozendict~=2.4",
    "huggingface-hub[hf_xet]>=0.30.1,<1.1.0",
    "injector~=0.22.0",
    "ir-datasets~=0.5.9",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "joblib~=1.4",
    "language-tool-python~=2.8",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "more-itertools~=10.5",
    "negspacy~=1.0",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "nltk~=3.9",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "numpy~=1.26",
    "pandas~=2.2",
    "python-dotenv~=1.0",
    "rouge-score~=0.1.2",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "scikit-learn~=1.4",
    "spacy~=3.7",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "targer-api~=1.1",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "textacy~=0.13.0",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
    "tqdm~=4.67",
    "trectools~=0.0.49",  # TODO: Make this an optional dependency and expose dependent interfaces only if installed.
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.8",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "ruff>=0.12.7,<0.14.0",
    "types-tqdm~=4.66",
]
experiments = [
    "cappr[hf]~=0.9.6",
    "ir-measures>=0.3.6,<0.5.0",
    "jupyter~=1.1",
    "lightgbm~=4.5",
    "ragas~=0.3.0",
    "ray[default,data]~=2.48",
    "seaborn~=0.13.2",
    "transformers~=4.48",
    "typing-extensions~=4.12",
    "xgboost>=2.1,<4.0",
]
pyserini = [
    "pyserini>=0.43,<2.0",
]
pyterrier = [
    "python-terrier~=0.13.0",
]
keybert = [
    "keybert>=0.8.5,<0.10.0",
]
sbert = [
    "sentence-transformers>=4.0,<6.0",
]

[project.urls]
"Homepage" = "https://github.com/webis-de/ir_axioms"
"Bug Tracker" = "https://github.com/webis-de/ir_axioms/issues"

[project.scripts]
axioms = "ir_axioms.cli:app"
ir_axioms = "ir_axioms.cli:app"
ir-axioms = "ir_axioms.cli:app"

[build-system]
requires = [
    "setuptools~=80.9",
    "setuptools-scm>=8,<10",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.ruff]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
    "experiments",  # TODO: Re-enable this once the experiments are cleaned up.
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]
ignore_missing_imports = true
disable_error_code = "type-abstract"

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = true
filterwarnings =[
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
    "ignore:Attempted to get latest version of terrier-assemblies:UserWarning",
]

[tool.setuptools_scm]
