[metadata]
name = ir_axioms
version = attr: ir_axioms.__version__
author = "Webis Group"
maintainer = Webis Group
description = Intuitive interface to many IR axioms.
long_description = file: README.md
long_description_content_type = "text/markdown"
license_file = LICENSE
url = https://git.webis.de/code-research/web-search/ir_axioms
project_urls =
    Bug Tracker = https://git.webis.de/code-research/web-search/ir_axioms/-/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    nltk~=3.6.5
    pymagnitude~=0.1.143
    requests~=2.26.0
    targer-api@git+https://github.com/heinrichreimer/targer-api.git@18af90110ad7c940cb2802dd2a09340f1a6afeb5

[options.extras_require]
pyserini =
    pyserini~=0.14.0
    pyjnius
pyterrier =
    python-terrier
test =
    flake8
    pylint
    pytest

[options.entry_points]
console_scripts =
    ir_axioms = ir_axioms:cli