[metadata]
name = ir_axioms
version = attr: ir_axioms.__version__
author = "Webis Group"
author_email = "jan.reimer@student.uni-halle.de"
maintainer = Webis Group
description = Intuitive interface to many IR axioms.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://git.webis.de/code-research/web-search/ir_axioms
project_urls =
    Bug Tracker = https://git.webis.de/code-research/web-search/ir_axioms/-/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    nltk>=3.6,==3.*
    pymagnitude>=0.1.143,==0.1.*
    requests>=2.26,==2.*
    targer-api>=1.0,==1.*
    trectools>=0.0.44,==0.0.*
    class-registry>=2.1,==2.*
    pandas>=1.4,==1.*
    tqdm>=4.8,==4.*
    ir-datasets>=0.4,==0.*
    numpy>=1.22,==1.*
    diskcache>=5.4,==5.*

[options.extras_require]
test =
    flake8>=4.0,==4.*
    pylint>=2.12,==2.*
    pytest>=6.2,==6.*
    pytest-cov>=3.0,==3.*
examples =
    jupyter>=1.0,==1.*
    jupyterlab>=3.2,==3.*
    lightgbm>=3.3,==3.*
    xgboost>=1.5,==1.*
pyserini =
    pyserini>=0.14.0,==0.14.*
    pyjnius>=1.4,==1.*
    faiss-cpu>=1.7,==1.*
pyterrier =
    python-terrier>=0.8,==0.*
    pyjnius>=1.3.0,==1.3.*


[options.package_data]
. = *.txt, *.md, *.rst

[options.entry_points]
console_scripts =
    ir_axioms = ir_axioms:cli

[flake8]
max-line-length = 80
