[metadata]
name = ir_axioms
version = attr: ir_axioms.__version__
author = "Webis Group"
author_email = "jan.reimer@student.uni-halle.de"
maintainer = Webis Group
description = Intuitive interface to many IR axioms.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/webis-de/ir_axioms
project_urls =
    Bug Tracker = https://github.com/webis-de/ir_axioms/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    nltk~=3.6
    pymagnitude~=0.1.143
    numpy~=1.21
    xxhash~=3.0
    fasteners~=0.17.3
    annoy~=1.17
    lz4~=4.0
    h5py~=3.6
    requests~=2.26
    targer-api~=1.0
    trectools~=0.0.44
    class-registry~=2.1
    pandas~=1.3
    tqdm~=4.8
    ir-datasets~=0.4
    diskcache~=5.4
    scikit-learn~=1.0
    typing-extensions~=4.0
    cached-property~=1.5
    annoy~=1.17
    importlib-metadata~=4.0
    joblib~=1.0

[options.extras_require]
test =
    flake8~=4.0
    pylint~=2.12
    pytest~=6.2
    pytest-cov~=3.0
examples =
    jupyter~=1.0
    jupyterlab~=3.2
    lightgbm~=3.3
    xgboost~=1.5
pyserini =
    pyserini~=0.14.0
    pyjnius~=1.4
    faiss-cpu~=1.7
pyterrier =
    python-terrier~=0.8
    pyjnius~=1.3.0


[options.package_data]
. = *.txt, *.md, *.rst

[options.entry_points]
console_scripts =
    ir_axioms = ir_axioms:cli

[flake8]
max-line-length = 80
